# evops-website

./: .cta.json  .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc.toml  LICENSE  LICENSE-MIT  api.json  buf.gen.yaml  buf.yaml  eslint.config.ts  index.html  next-i18next.config.ts  next.config.ts  package.json  pnpm-lock.yaml  prettier.config.js  prod.Dockerfile  vite.config.ts
public/: evops.wasm  manifest.json  sw.js
src/: globals.css  main.tsx  middleware.ts  routeTree.gen.ts
src/@types/: i18next.d.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/events/: page.tsx
src/app/i18n/: client.ts  i18next.ts  index.ts  settings.ts
src/app/signup/: page.tsx
src/components/: Header.tsx  PWAInstallPrompt.tsx
src/components/shared/: ArrowControl.tsx  BackButton.tsx  EventMeta.tsx  (+8 more)
src/hooks/: useApiExt.ts
src/lib/: constants.ts  formatDate.ts  i18n.ts  types.ts
src/routes/: __root.tsx  demo.tanstack-query.tsx  index.tsx  login.tsx  profile.tsx  signup.tsx
website/: .gitignore  .gitmodules  LICENSE  dev.Dockerfile  pnpm-lock.yaml
website/client-ext/: Cargo.toml  README.md
website/client-ext/crates/evops-extism/: Cargo.toml
website/client-ext/crates/evops-extism/src/: lib.rs
website/client-ext/crates/evops-markdown/: Cargo.toml
website/client-ext/crates/evops-markdown/src/: ast.rs  lib.rs  pb_conversions.rs  unist.rs
website/client-ext/crates/evops-markdown/src/ast/: blockquote.rs  code.rs  delete.rs  emphasis.rs  heading.rs  inline_code.rs  link.rs  list.rs  paragraph.rs  root.rs  strong.rs  text.rs  thematic_break.rs
website/client-ext/crates/evops-markdown/src/ast/heading/: depth.rs
website/client-ext/crates/evops-markdown/src/ast/link/: child.rs
website/client-ext/crates/evops-markdown/src/ast/list/: item.rs
website/client-ext/crates/evops-markdown/src/ast/paragraph/: child.rs
website/client-ext/crates/evops-markdown/src/ast/root/: child.rs
website/client-ext/crates/evops-models/: Cargo.toml
website/client-ext/crates/evops-models/src/: error.rs  lib.rs  services.rs
website/client-ext/crates/evops-models/src/services/: event.rs  tag.rs  user.rs
website/client-ext/crates/evops-pb-ext/: Cargo.toml  build.rs
website/client-ext/crates/evops-pb-ext/src/: conversions.rs  lib.rs
website/client-ext/crates/evops-uniffi/: Cargo.toml
website/client-ext/crates/evops-uniffi/src/: conversions.rs  lib.rs
website/client-ext/proto/evops/api/v1/: api.proto
website/client-ext/proto/evops/ext/v1/: ext.proto
(+50 files in other folders)
