[workspace]
resolver = "3"
members = ["crates/*/"]

[workspace.dependencies]
evops-markdown = { path = "crates/evops-markdown/" }
evops-models = { path = "crates/evops-models/" }
evops-pb-ext = { path = "crates/evops-pb-ext/" }

aide = "0.15.0"
axum = "0.8.4"
chrono = "0.4.41"
diesel = { version = "2.2.10", features = ["without-deprecated"] }
extism-pdk = { version = "1.4.1", default-features = false }
eyre = "0.6.12"
markdown = "1.0.0"
nutype = "0.6.1"
prost = "0.13.5"
prost-build = "0.13.5"
regex = "1.11.1"
schemars = { version = "0.9.0", features = ["preserve_order"] }
serde = "1.0.219"
thiserror = "2.0.12"
tonic = "0.13.1"
uniffi = "0.29.2"
url = "2.5.4"
uuid = "1.17.0"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
