[package]
name = "evops-models"
edition = "2024"

[dependencies]
aide = { workspace = true, optional = true, features = ["macros"] }
axum = { workspace = true, optional = true }
chrono = { workspace = true }
diesel = { workspace = true }
eyre = { workspace = true }
nutype = { workspace = true, features = ["new_unchecked", "regex"] }
regex = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, optional = true }
url = { workspace = true }
uuid = { workspace = true }

[features]
axum = ["dep:axum"]
aide = ["axum", "dep:aide"]
tonic = ["dep:tonic"]

[lints]
workspace = true
